# agno-workshop

./: .gitignore  README.md  commands.md  main.py  pyproject.toml  todo.md
demo/knowledge/: qdrant_demo.py
demo/memory/: simple.py
demo/reasoning/: reasoning_tool.py  reasoning_with_llm.py
demo/simple/: agent.py
demo/team/: coordinate.py
demo/with_tool/: tool.py
demo/with_tool/raindrop_agent/: agent.py
demo/with_tool/raindrop_agent/tools/: raindrop.py
